# oda-canvas

./: .gitignore  AGENTS.md  AI-Native-Canvas-design.md  Authentication-design.md  CLAUDE.md  CONTRIBUTING.md  Canvas-design.md  Event-based-integration-design.md  Installation.md  Kong_api_lifecycle_steps.js  Observability-design.md  PLAN-582.md  README.md  SecurityPrinciples.md  Specification.md  UC014-F0001-Create-and-Manage-API-Resource.feature  UC014-F001-API-Lifecycle-Management.feature  UC014-F001-Managing-Rate-Limit.feature  UC014-F002-API-Lifecycle-Management.feature  UC014-F002-Invoke-Rate-Limitting-Plugin.feature  UC014-F003-Managing-API-Authentication(JWT).feature  UC014-F004-Managing-CORS-Configuration.feature  UC014-F005-Managing-Plugins-from-URL-Template.feature  UC014-Manage-API-Lifecycle-with-Kubernetes-Kong-API-Operator.md  ai-coding-assistants.md  bdd-failed.json  bdd-passed.json  bdd-skipped.json  bdd-undefined.json  canvas-helm-install-debug-log-txt  code-of-conduct.md  comp-notready.json  create_tls_certificates.sh  create_tls_certificates_cert-manager_v1.sh  create_tls_certificates_cert-manager_v1alpha2.sh  devcontainer.md  helmoutput.yaml  index.yaml  install_canvas.sh  install_canvas_cert-manager.sh  (+3 more)
.devcontainer/: devcontainer.json
.github/: copilot-agent-docs.yml  copilot-instructions.md
TEMP/: .gitignore  DEMO.md  README.md  SETUP.md  TEST.md  VAULT.md  VAULT_WIN.md
archive/: create_tls_certificates_cert-manager_v1.sh  install_canvas.sh  install_canvas_cert-manager.sh  install_helm.sh  temp.json
canvas/: Chart.yaml  values.yaml
canvas-portal/: AGENTS.md  README.md  pom.xml
canvas-simplified-install/: README_ODA.md
charts/: AGENTS.md  code-of-conduct.md  index.yaml  rev-chart-1.1.6-rc2.tgz
clusterenablers/: values.yaml
compliance-test-kit/: Phase-1-CTK.md  README.md  package.json  tests.js
demos/: EXT_KEYCLOAK_TEST.md
docs/: README.md  bdd-feature-generator-agent-guide.md  custom-copilot-documentation-agent.md  plantuml-to-svg-guide.md  writing-style.md
feature-definition-and-test-kit/: .env.test  AGENTS.md  Executing-tests.md  PDB-TEST-README.md  README.md  UC005-F005-README.md  UC005-F005-Test-Implementation-Guide.md  getTags.js  package.json  vibeta2.yaml  vibeta4.yaml
installation/: README.md  precheck.sh  setup_CanvasVault.sh
oda-ca/: .gitignore  README.md  pv.yaml
oda-canvas-ctk/: .gitignore  README.md  package.json  tests.js
release-notes/: ReleaseNotes.md  oda-component-oas-v1.yaml  oda-component-oas-v1beta2.yaml  oda-component-oas-v1beta3.yaml
scripts/: local-test.sh  plantuml-to-svg.js  run-with-act.sh
source/: .gitignore  AGENTS.md  README.md
source/tmf-services/MCP_Resource_Inventory/: .env.example  .gitignore  README.md  SETUP_COMPLETE.md  dev.ps1  helm_api.py  pyproject.toml  resource_inventory_api.py  resource_inventory_mcp_server.py  test_helm_functionality.py  test_resource_inventory_api.py  verify_integration.py
tmp/: README.md
usecase-library/: AGENTS.md  README.md  UC001-Bootstrap-role-for-component.md  UC001-Install-Canvas.md  UC002-Expose-APIs-for-Component.md  UC002-Manage-Components.md  UC003-Configure-Exposed-APIs.md  UC003-Discover-dependent-APIs-for-Component.md  UC004-Configure-Observability.md  UC004-Configure-Published-Events.md  UC005-Configure-Clients-and-Roles.md  UC005-Configure-Users-and-Roles.md  UC005-Technical-Observability.md  UC005-View-Baseline-Observability.md  UC006-Business-Observability.md  UC006-Configure-Observability.md  UC006-View-Custom-Observability.md  UC007-Configure-Dependent-APIs.md  UC008-Authentication-internal.md  UC008-Configure-Subscribed-Events.md  UC009-Authorization.md  (+18 more)
(+2848 files in other folders)
